--- a/room.html
+++ b/room.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html style="height:100vh;" lang="en">
-<head>
+<html lang="en">
+<head style="height:100vh;">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="S_Chat.css">
-    <link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet"><meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="room.css">
     <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/live/3.1/firebase.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet"><meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <title>S Chat</title>
 </head>
-<body onload="onLoad()">
+<body>
     <div class="container">
         <button onclick="logout()" id="logout" class="glyphicon glyphicon-log-out btn btn-danger">Logout</button>
     <center>
@@ -23,18 +23,8 @@
                 <img style="width:80px;height:80px;" src="m2.png">
             </sup>
         </h1>
-        <h3 id="Welcome" class="color_white"></h3>
-		<div class="form-group input_div_room_page">
-			<label>Add Room:</label>
-			<input id="room_name" class="form form-control" type="text">
-		</div>
-		<button class="btn btn-success" onclick="addRoom()">Add Room</button>
-		<h3 class="color_white">TRENDING ROOMS</h3>
-	    <div id="trending_rooms">
-			
-		</div>
     </center>
     </div>
-    <script src="S_Chat.js"></script>
+    <script src="room.js"></script>
 </body>
 </html>
