--- a/room.html
+++ b/room.html
@@ -23,6 +23,16 @@
                 <img style="width:80px;height:80px;" src="m2.png">
             </sup>
         </h1>
+        <div id="output">
+
+        </div>
+    </center>
+    <center>
+        <div style="width:100%;" class="input_div_message_page"> 
+            <label>Send:</label> 
+            <input type="text" id="msg" class="form-control" placeholder="Message"> 
+            <button id="send" onclick="send()" class="btn btn-success">Send</button>
+        </div> 
     </center>
     </div>
     <script src="room.js"></script>
